--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,8 @@
 name: Auto Commit JSON
+
 on:
   schedule:
-    - cron: "*/5 * * * *"  # runs every 5 minutes
+    - cron: "*/2 * * * *"  # Every 5 mins
 
 jobs:
   commit-json:
@@ -12,11 +13,10 @@ jobs:
 
       - name: Fetch and update JSON
         run: |
-          curl -LOR https://database.gformsnap.xyz/read?token=qazwsxedcrfv
-          # Add any processing or validation steps here if needed
+          curl -s https://database.gformsnap.xyz/read?token=qazwsxedcrfv -o data.json
 
       - name: Commit and Push
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "Automated update of data.json"
-          file_pattern: "data.json"
+          commit_message: "Automated update data.json"
+          file_pattern: data.json
