--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,8 @@
-name: Auto Fetch JSON and Commit
+name: Auto Fetch JSON
 
 on:
   schedule:
-    - cron: "*/2 * * * *"   # every 7 minutes
-  workflow_dispatch:        # manual trigger
+    - cron: "*/2 * * * *"   # Automatically every 5 minutes
 
 jobs:
   auto-fetch:
@@ -13,12 +12,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # enables pushing
+          fetch-depth: 0  # Needed to push commits
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.x"
+          python-version: '3.x'
 
       - name: Install dependencies
         run: pip install requests
@@ -30,7 +29,7 @@ jobs:
         run: |
           git config --local user.name "github-actions[bot]"
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
-
+          
           git add .
           git commit -m "Auto update $(date -u)" --allow-empty
           git push
